create-new-user/tenants/user11/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user11
  labels:
    pod-security.kubernetes.io/enforce: restricted
    tenant: "user11"
