create-new-user/tenants/user11/pod-sample.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  namespace: user11
spec:
  containers:
  - name: nginx
    image: nginx
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
          - ALL
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
  securityContext:
    runAsUser: 1002
    runAsGroup: 1002
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
