create-new-user/tenants/user11/networkpolicy-allow-same-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: user11
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tenant: "user11"
      podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          tenant: "user11"
      podSelector: {}
  policyTypes:
  - Ingress
  - Egress
