create-new-user/tenants/user11/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-egress
  namespace: user11
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
